# MAI_OS

./: .gitignore  README.md
battleship/: Board.hpp  CMakeLists.txt  ClientSocket.hpp  ServerSocket.hpp  client.cpp  fast_game.txt  server.cpp
battleship/docs/: cp_report.docx
lw1/: CMakeLists.txt  child_process.cpp  main.cpp
lw1/docs/: lw1_report.docx
lw2/: CMakeLists.txt  charts.ods  main.cpp  main0.cpp
lw2/InOutFiles/: 10.txt  100.txt  output.txt
lw2/docs/: lw2_report.docx
lw3/: CMakeLists.txt  child_process.cpp  main.cpp  shared_data.hpp
lw3/docs/: lw3_report.docx
lw4/: CMakeLists.txt  dynamic_main.cpp  function.hpp  function1.cpp  function2.cpp  static_main.cpp
lw4/docs/: lw4_report.docx
lw5-7/docs/: lw5-7_report.docx
lw8/: lw8_report.docx
